--- a/Bottle/Base.lproj/Main.storyboard
+++ b/Bottle/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="eaW-rW-18i">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +10,95 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Bottle" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bottle-full-dark" translatesAutoresizingMaskIntoConstraints="NO" id="As2-dQ-19f">
+                                <rect key="frame" x="152" y="283" width="110" height="330"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="330" id="Bp2-iT-7ru"/>
+                                    <constraint firstAttribute="width" constant="110" id="J9m-Ht-Ikq"/>
+                                </constraints>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bHn-fR-iLM">
+                                <rect key="frame" x="152" y="283" width="110" height="330"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="330" id="YFn-Uj-Pgm"/>
+                                    <constraint firstAttribute="width" constant="110" id="rUf-K1-7ID"/>
+                                </constraints>
+                            </view>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bottle-empty-dark" translatesAutoresizingMaskIntoConstraints="NO" id="Iny-EX-JUn">
+                                <rect key="frame" x="152" y="283" width="110" height="330"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="110" id="Fa2-cJ-aL2"/>
+                                    <constraint firstAttribute="height" constant="330" id="QUq-20-dvC"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="As2-dQ-19f" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="8R6-MG-GL6"/>
+                            <constraint firstItem="Iny-EX-JUn" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="HLI-6w-FQh"/>
+                            <constraint firstItem="bHn-fR-iLM" firstAttribute="bottom" secondItem="Iny-EX-JUn" secondAttribute="bottom" id="Jbc-hf-cD5"/>
+                            <constraint firstItem="As2-dQ-19f" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="V4d-AQ-vIk"/>
+                            <constraint firstItem="Iny-EX-JUn" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="r5X-5Q-IAP"/>
+                            <constraint firstItem="bHn-fR-iLM" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="sJW-eR-IxO"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="" image="drop.triangle" catalog="system" id="RCb-c6-71l"/>
+                    <connections>
+                        <outlet property="emptyBottleImageView" destination="Iny-EX-JUn" id="9m9-3e-fEK"/>
+                        <outlet property="fullBottleImageView" destination="As2-dQ-19f" id="4dT-Ro-ubL"/>
+                        <outlet property="levelConstraint" destination="Jbc-hf-cD5" id="pOF-Wd-isC"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="979.71014492753636" y="127.90178571428571"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Fev-j8-AYV">
+            <objects>
+                <viewController id="fUp-nl-epr" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ZgX-9s-Zco">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="9ES-9h-RcP"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="" image="gear" catalog="system" selectedImage="gear" id="IsO-BR-9Pf"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Cdy-u0-tkv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1896" y="125"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="3Z9-SN-Bv0">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="eaW-rW-18i" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="6oY-tA-two">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="xur-Ra-wm2"/>
+                        <segue destination="fUp-nl-epr" kind="relationship" relationship="viewControllers" id="VJr-SC-DGc"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bhP-da-1dh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="69.565217391304358" y="127.90178571428571"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="bottle-empty-dark" width="310" height="898"/>
+        <image name="bottle-full-dark" width="310" height="898"/>
+        <image name="drop.triangle" catalog="system" width="64" height="56"/>
+        <image name="gear" catalog="system" width="64" height="58"/>
+    </resources>
 </document>
